small fixes from vicky's comments

--- a/references.bib
+++ b/references.bib
@@ -10879,3 +10879,14 @@ Subject\_term: Computational biology and bioinformatics, Computer science, Resea
   keywords = {anti-oppressive praxis,critical social theory,discrimination,marginalization,QuantCrit,quantitative criticalism,social justice},
   file = {/home/work/Zotero/storage/83R9L92L/Curtis et al. - 2022 - Quantitative criticalism Guidelines for conducting transformative quantitative family science resea.pdf;/home/work/Zotero/storage/BY88I3FM/jftr.html}
 }
+
+@misc{lumleyWeightsStatistics2020,
+  title = {Weights in Statistics},
+  author = {Lumley, Thomas},
+  year = {2020},
+  month = aug,
+  journal = {Biased and Inefficient},
+  urldate = {2024-09-04},
+  langid = {american},
+  file = {/home/work/Zotero/storage/HZ7FK6WQ/weights-in-statistics.html}
+}
